# lmm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
src/: artifacts.rs  cli.rs  config.rs  error.rs  format.rs  hf.rs  lib.rs  lock.rs  main.rs  model.rs  paths.rs  security.rs  tui.rs
src/adapters/: comfyui.rs  hf_direct.rs  jan.rs  llama_cpp.rs  lmstudio.rs  mod.rs  ollama.rs  webui.rs
src/commands/: add.rs  adopt.rs  config.rs  consolidate.rs  doctor.rs  external_scan.rs  format_resolution.rs  gc.rs  list.rs  mod.rs  model_helpers.rs  remove.rs  scan.rs  search.rs  tool_resolution.rs  update.rs
tests/: integration_tests.rs
